# nani-switch

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.en.md  README.md  build.rs
.github/workflows/: ci.yml  release.yml
installer/: nani-switch.iss
src/: app.rs  crypto.rs  db.rs  dialog.rs  logger.rs  main.rs  model.rs  nani.rs  paths.rs  startup.rs  store.rs  usage.rs
