[package]
name = "nani-switch"
version = "0.1.0"
edition = "2024"
authors = ["Tsuuko"]
description = "A lightweight Windows tray app for switching between Nani accounts"
license = "MIT"
readme = "README.md"
keywords = ["nani", "tray", "account-switcher", "windows"]
categories = ["gui"]
publish = false

[dependencies]
aes = "0.9.1"
anyhow = "1.0.103"
base64 = "0.22.1"
ctr = "0.10.1"
image = { version = "0.25.10", default-features = false, features = ["png"] }
indexmap = { version = "2.14.0", features = ["serde"] }
rand = "0.10.2"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "native-tls"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
single-instance = "0.3.3"
tray-icon = { version = "0.24.1", default-features = false }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
winreg = "0.56.0"

[build-dependencies]
winresource = "0.1.31"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
panic = "abort"
strip = true
